apps/unifi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: unifi
    annotations:
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
        nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8, 100.64.0.0/10
spec:
    ingressClassName: nginx
    rules:
        - host: unifi
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: unifi
                            port:
                                number: 8443
    tls:
        - hosts:
              - unifi
